import React from 'react';
import { GifExpertApp } from '../GifExpertApp';
import { shallow } from 'enzyme';
import '@testing-library/jest-dom';

describe('Pruebas en el componente', () => {

    test('Debe mostrar el coponente', () => {

        const wrapper = shallow( <GifExpertApp /> );

        expect( wrapper).toMatchSnapshot();

    });

    test('Debe de mostar una lista de categorias', () => {

        const categories = ['One Punch', 'Dragon Ball'];
        const wrapper = shallow(<GifExpertApp defaultCategories = { categories } /> );

        expect( wrapper ).toMatchSnapshot();
        expect( wrapper.find('GifGrid').length ).toBe( categories.length );

    });
});